# notengine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  asdf.md
assets/shader/: AlphaShader.vert
assets/shaders/: alpha.frag  alpha.vert  pbr.frag  pong.frag
demo/: demo.cpp  toolkit_demo.cpp
include/glad/: gl.h
include/knot/: camera.h  camera.hpp  engine.h  event.h  key.h  manager.h  math.h  renderer.h  resources.h  scene.h  toolkit.h  utility.h  window.h
include/knot/utility/: key_state.h  mesh_helper.h  mesh_helper.hpp  mouse_key.h  scancode.h  texture.h
include/not/: resources.h
script/sdl_scancode/: script.py
src/: camera.cpp  engine.cpp  manager.cpp  mesh_helper.cpp  renderer.cpp  resources.cpp  scene.cpp  texture.cpp  window.cpp
src/shader/: AlphaShader.frag
